Fix. overflow-x

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@ body {
   cursor:
     url(/img/cursor.png) 5 2,
     auto;
+  overflow-x: hidden;
 }
 
 a {
